--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ android {
         main {
             res.srcDirs =
                     [
-                            'src/main/res/layout/layouts_land',
+                            'src/main/res/layout/layout_land',
                             'src/main/res/layout',
                             'src/main/res'
-                    ]
+                            , 'src/main/res/layout/layout_land2']
         }
     }
 }
@@ -51,4 +51,3 @@ dependencies {
     debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
     releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
 }
-
